Add main screen

--- a/app/src/main/res/layout/activity_start_hunt.xml
+++ b/app/src/main/res/layout/activity_start_hunt.xml
@@ -4,15 +4,22 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.scottwgibson.assassinsnail.AssassinSnail">
+    tools:context="com.scottwgibson.assassinsnail.StartHunt"
+    android:weightSum="1">
+
+    <TextView android:text="@string/explanation" android:layout_width="wrap_content"
+        android:layout_height="62dp"
+        android:id="@+id/textView"
+        android:layout_weight="0.87"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/start"
-        android:nestedScrollingEnabled="false"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:onClick="sendMessage" />
+        android:text="@string/startButton"
+        android:id="@+id/startbutton"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
