--- a/app/src/main/res/layout/activity_start_hunt.xml
+++ b/app/src/main/res/layout/activity_start_hunt.xml
@@ -22,4 +22,23 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 
+    <FrameLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@+id/textView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_above="@+id/startbutton"
+        android:layout_alignRight="@+id/textView"
+        android:layout_alignEnd="@+id/textView"
+        android:id="@+id/fragmentFrame">
+
+        <fragment
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:name="com.google.android.gms.maps.MapFragment"
+            android:id="@+id/mapfragment"
+            android:layout_gravity="center" />
+    </FrameLayout>
+
 </RelativeLayout>
